fix alignments for Projects and Contact components

--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -8,7 +8,7 @@
   gap: 3rem;
   padding-top: 1rem;
 
-  @include respond-to(xl) {
+  @include respond-to(md) {
     flex-direction: column;
     gap: 2rem;
   }
@@ -20,9 +20,9 @@
   &-subtitle {
     color: #34d399;
     font-size: 2rem;
-    margin-bottom: 4rem;
     text-transform: uppercase;
     letter-spacing: 1px;
+    padding: 5rem 0 3rem 0;
   }
 
   &-title {
@@ -60,7 +60,7 @@
       align-items: center;
       gap: 0.5rem;
       margin-bottom: 0.8rem;
-font-size: 2rem;
+      font-size: 2rem;
       i {
         color: #00e68a;
         border: 0.5px solid #9e9e9e;
@@ -74,7 +74,6 @@ font-size: 2rem;
         text-decoration: none;
         transition: 0.3s;
         font-size: 1.1rem;
-
       }
     }
   }
@@ -117,8 +116,6 @@ font-size: 2rem;
         display: flex;
         flex-direction: column;
 
-        
-
         input,
         textarea {
           width: 100%;
@@ -137,10 +134,11 @@ font-size: 2rem;
         }
 
         input:-webkit-autofill,
-textarea:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0px 1000px #161b22 inset;
-  -webkit-text-fill-color: #d6d6d6;
-  border: 0.5px solid #3f3f46; }
+        textarea:-webkit-autofill {
+          -webkit-box-shadow: 0 0 0px 1000px #161b22 inset;
+          -webkit-text-fill-color: #d6d6d6;
+          border: 0.5px solid #3f3f46;
+        }
 
         textarea {
           resize: none;
