--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,20 +9,10 @@
   justify-content: space-between;
   position: relative;
   min-width: 430px;
+  padding: 0 50px;
 }
 
 .main-container section:not(:first-of-type) {
-    padding: 100px 300px;
-
-    @include respond-to(xl) {
-    padding: 50px 200px;
+    max-width: 1140px;
+    margin: 0 auto;
   }
-
-  @include respond-to(md) {
-    padding: 50px 100px;
-  }
-
-  @include respond-to(sm) {
-    padding: 50px 50px;
-  }
-}
